structural-typing/tests/ui/select_invalid_prefix_plus.stderr
error: no rules expected `+`
 --> tests/ui/select_invalid_prefix_plus.rs:9:34
  |
9 |     type Invalid = select!(user: +name);
  |                                  ^ no rules expected this token in macro call
  |
note: while trying to match `..`
 --> src/lib.rs
  |
  |     ($($module:ident)::+ : .. $spread:ty) => {
  |                            ^^
